assets/style.css
* {
    /* border: 1px solid lightblue; */
    background-color: black;
    box-sizing: border-box;

}

:root {
    --lcars-violet: #c9f;
    --lcars-light-blue: #79f;
    --lcars-orange: #f80;
    --lcars-red: #c44;
    --lcars-beige: #ffaa90;

}

body {
    font-family: 'Antonio', sans-serif;
    font-size: 1.3rem;
    background-color: black;
    margin: 0;
    padding: 5px 0;
  }

.container {
    line-height: 1.5;
}

#lcars-upper {
    /* height: 40%; */
    font-weight: bold;
    max-width: 1340px;
}

#upper-left-panels {
    /* width: 230px;
    height: 363px; */
    width: 190px;
    min-width: 190px;
    color: black;
    text-align: right;

    background-color: var(--lcars-light-blue);
    border-radius: 0 0 0 100px;
}

#banner {
    position: relative;
}

/* img {
    width: 300px;
    height: auto;
} */


#analog-forecast {
    width: 60%;
}

.panel-text {
    color: black;
}

h1 {
    line-height: 1.5;
    font-weight: 400;
    font-size: 4.75rem;
    color: var(--lcars-orange);
    text-transform: uppercase;
    letter-spacing: .5rem;
}

.panel-01 {
    text-align: right;
    background-color: var(--lcars-violet);    
    padding-top: clamp(40px, 9vw, 82px);
    padding-right: .75rem;
    padding-bottom: .75rem;
    border-bottom: .25rem solid black;
}

.panel-02 {
    background-color: #89f;   
    padding-right: .75rem; 
    padding-top: .75rem;
}

/* #panel-01-text {
    background-color: var(--lcars-violet);
    padding: 38% 0 0 45%;
    font-weight: bold;
    text-transform: uppercase;
}

#panel-02-text {
    background-color: var(--lcars-light-blue);
    padding: 10% 0 0 45%;
    font-weight: bold;
    text-transform: uppercase;
} */

/* .upper-left-panel-text {
    padding: 50% 10% 5% 0;
    color: white;
} */

ul {
    text-transform: uppercase;
    list-style-type: none;
    text-align: right;
}

li {
    overflow: hidden;
    font-size: 1rem;
    text-align: right;
    font-weight: bold;
    margin: 0;
}

 #nav-group {
    /* display: flex; 
    justify-content: flex-end; */
    width: auto;
} 

.nav-btn {
    color: black;
    width: 45%;
    height: 35%;
}

.btn-tag {
    font-size: 1.5rem;
    padding: 20% 20% 0 0;
    font-weight: bold;
}

.nav-btn:nth-child(1) {
    background-color: #89f;
}

.nav-btn:nth-child(2) {
    background-color: #f96;
}

.nav-btn:nth-child(3) {
    background-color: #f80;
}

.nav-btn:nth-child(4) {
    background-color: #c44;
}

@keyframes row-1-colorchange {
    0% {color: #f80}
    25% {color: #f80}
    50% {color: #f80}
    75% {color: #f80}
    80% {color: #f80}
    90% {color: black}
    100% {color: #f5f6fa}
}

@keyframes colorchange {
    0% {color: #f80}
    25% {color: #f80}
    50% {color: #f80}
    75% {color: #f80}
    80% {color: black}
    90% {color: black}
    100% {color: #f5f6fa}
}

/*  Temporary Styling - Will be built dynamically in JS */
@keyframes danger-colorchange {
    0% {color: red}
    25% {color: red}
    50% {color: red}
    75% {color: red}
    80% {color: black}
    90% {color: black}
    100% {color: #f5f6fa} 
}

@keyframes alert-colorchange {
    0% {color: yellow}
    25% {color: yellow}
    50% {color: yellow}
    75% {color: yellow}
    80% {color: black}
    90% {color: black}
    100% {color: #f5f6fa} 
}

#dehli-danger {
    animation: danger-colorchange 3s infinite; animation-delay: .3s;

}

#shanghai-alert {
    animation: alert-colorchange 3s infinite; animation-delay: .4s;

}
#dhaka-alert {
    animation: alert-colorchange 3s infinite; animation-delay: .5s;
}

#nyc-alert {
    animation: alert-colorchange 4s infinite; animation-delay: .8s;
}

/*  End temp code    */


.row-1{
    color: #f80;
    margin-left: 0;
}

.row-2,
.row-3,
.row-4,
.row-5,
.row-6,
.row-7,
.row-8,
.row-9,
.row-10,
.row-11,
.row-12 {
    text-align: right; 
    margin-left: 0;
}

.row-1 {
    animation: row-1-colorchange 4s infinite; 
}

.row-2 {
    animation: colorchange 2s infinite; animation-delay: .1s;
}

.row-3 {
    animation: colorchange 2s infinite; animation-delay: .2s;
}

.row-4 {
    animation: colorchange 3s infinite; animation-delay: .3s;
}

.row-5 {
    animation: colorchange 3s infinite; animation-delay: .4s;
}

.row-6 {
    animation: colorchange 3s infinite; animation-delay: .5s;
}

.row-7 {
    animation: colorchange 4s infinite; animation-delay: .6s;
}

.row-8 {
    animation: colorchange 4s infinite; animation-delay: .7s;
}

.row-9 {
    animation: colorchange 4s infinite; animation-delay: .8s;
}

.row-10 {
    animation: colorchange 5s infinite; animation-delay: .9s;
}

.row-11 {
    animation: colorchange 5s infinite; animation-delay: 1s;
}

.row-12 {
    animation: colorchange 5s infinite; animation-delay: 1.1s;
}


#top-curve {
    width: 40px;
    height: 40px;
    background: linear-gradient(to top right, #79f 50%, black 50%);
}

#top-curve-inner {
    width: 40px;
    height: 40px;
    background-color: black;
    border-radius: 0 0 0 40px;
}

.upper-bar-01,
.upper-bar-02,
.upper-bar-03,
.upper-bar-04,
.upper-bar-05,
.lower-bar-01,
.lower-bar-02,
.lower-bar-03,
.lower-bar-04,
.lower-bar-05 {
    height: 22px;
    border-right: .25rem solid black;
}

.upper-bar-01 {
    background-color: var(--lcars-light-blue);
    width: 448px;
    margin-left: -3%;
}

.upper-bar-02 {
    background-color: var(--lcars-orange);
    width: 40px;
}

.upper-bar-03 {
    background-color: var(--lcars-violet);
    width: 200px;
}

.upper-bar-04 {
    background-color: var(--lcars-violet);
    width: 425px;
}

.upper-bar-05 {
    background-color: var(--lcars-red);
    width: 4%;
}

.upper-bar-05::after {
    background-color: black;
    width: 4%;
}


.lcars-lower {
    max-width: 1340px;
    /* height: auto; */
    font-weight: bold;
    padding: 0 10px 0 5px;
    margin-top: 10px;
}

.lower-left-panels {
    width: 190px;
    min-width: 190px;
    padding-top: 100px;
    /* color: black; */
    text-align: right;
    background-color: var(--lcars-red);
    border-radius: 100px 0 0 0;
}

.panel-03, 
.panel-04, 
.panel-05,
.panel-06,
.panel-07,
.panel-08,
.panel-09 {
    border-bottom: 5px solid black;
    color: black;
}

.panel-03 {
    padding: 0 10px 15px 0;
    background-color: var(--lcars-red);

}

.panel-04 {
    padding: 120px 10px 15px 0;
    background-color: var(--lcars-red);
}

.panel-05 {
    background-color: var(--lcars-orange);
    padding: 35px 10px 10px 0;
}

.panel-06 {
    background-color: var(--lcars-beige);
    padding: 10px 10px 200px 0;
}

.panel-07 {
    background-color: var(--lcars-light-blue);
    padding: 10px 10px 120px 0;
}

.panel-08 {
    background-color: var(--lcars-beige);
    padding: 10px 10px 40px 0;
}

.panel-09 {
    background-color: var(--lcars-red);
    padding: 10px 10px 120px 0;
}

.lower-bar-01 {
    background-color: var(--lcars-red);
    width: 438px;
    margin-left: -3%;
}

.lower-bar-02 {
    background-color: var(--lcars-beige);
    width: 40px;
}

.lower-bar-03 {
    background-color: var(--lcars-red);
    width: 200px;
    height: 14px;
}

.lower-bar-04 {
    background-color: var(--lcars-violet);
    width: 425px;
}

.lower-bar-05 {
    background-color: var(--lcars-beige);
    width: 4%;
}

.lower-bar-05::after {
    background-color: black;
    width: 4%;
}

#lower-curve {
    width: 40px;
    height: 40px;
    background: linear-gradient(to bottom right, #c44 50%, black 50%);
    z-index: 1;
}

/* #top-curve {
    width: 40px;
    height: 40px;
    background: linear-gradient(to top right, #79f 50%, black 50%);
} */

#lower-curve-inner {
    width: 40px;
    height: 40px;
    background-color: black;
    border-radius: 40px 0 0 0;
}

#search-form {
    border-color: var(--lcars-orange);

}

#form-heading,
#search-button {
    color: var(--lcars-orange);
}

